Fully responsive features page

--- a/website/index.html
+++ b/website/index.html
@@ -48,7 +48,7 @@
       </a>
     </aside>
 
-    <aside class="flex flex-col flex-1 mb-20 lg:mb-0 lg:max-w-sm">
+    <aside class="flex flex-col flex-1 lg:max-w-sm">
       <h3 class="header-section">
         <span>{{ svg('puzzle') }}</span>{{ _('Fully Customizable')}}
       </h3>
