Fully responsive Get Involved page

--- a/website/features/index.html
+++ b/website/features/index.html
@@ -42,7 +42,7 @@
 {% block content %}
   <section id="getstarted" class="mt-20 mb-14 flex max-w-6xl mx-auto justify-center items-center pl-8 pr-8">
     <span class="header-line flex-1"></span>
-    <h2 class="header-section pl-4 pr-4 mb-0">{{ _('Easier to Get Started')}}</h2>
+    <h2 class="header-section pl-4 pr-4 mb-0 text-center">{{ _('Easier to Get Started')}}</h2>
     <span class="header-line flex-1"></span>
   </section>
 
@@ -97,7 +97,7 @@
 
   <section id="tabssearch" class="mt-20 mb-14 flex max-w-6xl mx-auto justify-center items-center pl-8 pr-8">
     <span class="header-line flex-1"></span>
-    <h2 class="header-section pl-4 pr-4 mb-0">{{ _('Tabs and Search')}}</h2>
+    <h2 class="header-section pl-4 pr-4 mb-0 text-center">{{ _('Tabs and Search')}}</h2>
     <span class="header-line flex-1"></span>
   </section>
 
@@ -157,7 +157,7 @@
 
   <section id="customize-email" class="mt-20 mb-14 flex max-w-6xl mx-auto justify-center items-center pl-8 pr-8">
     <span class="header-line flex-1"></span>
-    <h2 class="header-section pl-4 pr-4 mb-0">{{ _('Customize Your Email Experience')}}</h2>
+    <h2 class="header-section pl-4 pr-4 mb-0 text-center">{{ _('Customize Your Email Experience')}}</h2>
     <span class="header-line flex-1"></span>
   </section>
 
@@ -215,9 +215,9 @@
     </aside>
   </section>
 
-  <section id="secureprotect" class="mt-20 mb-14 flex max-w-6xl mx-auto justify-center items-center pl-8 pr-8">
+  <section id="secureprotect" class="mt-20 md:mb-14 flex max-w-6xl mx-auto justify-center items-center pl-8 pr-8">
     <span class="header-line flex-1"></span>
-    <h2 class="header-section pl-4 pr-4 mb-0">{{ _('Secure and Protect Your Email')}}</h2>
+    <h2 class="header-section pl-4 pr-4 mb-0 text-center">{{ _('Secure and Protect Your Email')}}</h2>
     <span class="header-line flex-1"></span>
   </section>
 
