Responsive release notes, system requirements, and thunderbird sub folder pages

--- a/website/thunderbird/68.0/whatsnew/index.html
+++ b/website/thunderbird/68.0/whatsnew/index.html
@@ -7,9 +7,9 @@
 {% block page_title %}{{ _('New in Thunderbird 68') }}{% endblock %}
 
 {% block header_content %}
-  <section class="text-left text-white flex flex-col items-start w-full max-w-6xl mx-auto pl-8 pr-8">
-    <h1 class="font-hero font-thin mt-10 mb-8">{{ self.page_title() }}</h1>
-    <p class="font-xl tracking-wide leading-relaxed max-w-4xl mb-16 mt-0 p-links">
+  <section class="text-left text-white flex flex-col items-start lg:w-full max-w-6xl mx-auto pl-8 pr-8">
+    <h1 class="font-4xl md:font-hero font-thin md:mt-10 mb-8">{{ self.page_title() }}</h1>
+    <p class="font-lg md:font-xl tracking-wide leading-relaxed max-w-4xl mb-16 mt-0 p-links">
       {{ _('This article describes some of the major changes visible to users in Thunderbird version 68.0. Full details of all the changes can be found in the <a href="%(release)s">Thunderbird 68 release notes</a>.')|format(release='https://www.thunderbird.net/thunderbird/68.0/releasenotes/') }}
       </p>
   </section>
@@ -30,8 +30,8 @@
     </aside>
   </section>
 
-  <section class="pb-10 flex max-w-6xl mx-auto justify-between pl-8 pr-8">
-    <aside class="flex flex-col flex-1 max-w-lg">
+  <section class="pb-10 flex flex-col lg:flex-row max-w-6xl mx-auto justify-between pl-8 pr-8">
+    <aside class="flex flex-col flex-1 lg:max-w-lg">
       <img class="w-full h-auto mb-10 max-w-sm self-center shadow-lg" src="{{ static('/media/img/thunderbird/features/filelink.png') }}" alt="">
       <h3 class="header-section">
         <span>{{ svg('link') }}</span>
@@ -45,7 +45,7 @@
       </p>
     </aside>
 
-    <aside class="flex flex-col flex-1 max-w-lg">
+    <aside class="flex flex-col flex-1 lg:max-w-lg mt-10 lg:mt-0">
       <img class="w-full h-auto mb-10 max-w-sm self-center shadow-lg" src="{{ static('/media/img/thunderbird/features/preferences-in-tab.png') }}" alt="">
       <h3 class="header-section">
         <span>{{ svg('settings') }}</span>
@@ -60,8 +60,8 @@
     </aside>
   </section>
 
-  <section class="pt-20 pb-20 flex justify-center bg-calendar">
-    <aside class="flex flex-col flex-1 max-w-6xl ml-16 mr-16">
+  <section class="pt-20 pb-20 flex justify-center bg-calendar pr-8 pl-8">
+    <aside class="flex flex-col flex-1 lg:max-w-6xl lg:ml-16 lg:mr-16">
       <h3 class="header-section">
         <span>{{ svg('news') }}</span>
         {{ _('Other Notable Changes')}}
@@ -75,39 +75,6 @@
     </aside>
   </section>
 
-    <section class="pt-20 pb-20 flex max-w-6xl mx-auto justify-between pl-8 pr-8 mb-10">
-    <aside class="flex flex-col flex-1 max-w-lg">
-      <h3 class="header-section">{{ _('Thunderbird is funded by users like you')}}</h3>
-      <p class="font-lg tracking-wider leading-loose mb-8 mt-0 flex-1">
-        {{ _('Thunderbird is both free and freedom respecting, but we’re also completely funded by donations! Help us sustain the project and continue to improve.') }}
-      </p>
-      <a href="{{ donate_url('home_page_body') }}" class="btn-donate self-start ml-0 mr-0" target="_blank">
-        <span class="inline-block w-3 mr-1">{{ svg('heart') }}</span> {{_('Donate')}}
-      </a>
-    </aside>
-
-    <aside class="flex flex-col flex-1 max-w-lg">
-      <h3 class="header-section">{{ _('Join our Newsletter')}}</h3>
-      <p class="font-lg tracking-wider leading-loose mb-8 mt-0 flex-1">
-        {{ _('Keep up with the latest and greatest updates on news, features, events, and previews, and get a sneak peek on the upcoming releases.') }}
-      </p>
-      <!-- Begin Mailchimp Signup Form -->
-      <form action="https://mozilla.us12.list-manage.com/subscribe/post?u=f8051cc8637cf3ff79661f382&amp;id=9badb0cec2"
-            class="shadow flex items-center rounded-md self-start p-1"
-            method="post" id="mc-embedded-subscribe-form"
-            name="mc-embedded-subscribe-form"
-            target="_blank">
-        <input id="mce-EMAIL" name="EMAIL" type="email" placeholder="{{ _('Your Email') }}"
-          class="w-64 appearance-none border-none p-2 tracking-wide font-semibold font-regular" required>
-        <button type="submit" id="mc-embedded-subscribe" class="btn-newsletter">{{ _('Sign me up!') }}</button>
-        <!-- Prevent Bot signups -->
-        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-            name="b_f8051cc8637cf3ff79661f382_9badb0cec2" tabindex="-1" value=""></div>
-      </form>
-      <!--End mc_embed_signup-->
-    </aside>
-  </section>
-
-  
+  {% include '_includes/donate-mailing-list.html' %}
 
 {% endblock %}
