--- a/website/thunderbird/all/index.html
+++ b/website/thunderbird/all/index.html
@@ -24,7 +24,7 @@
 {% block header_content %}
   <section class="text-center text-white flex flex-col items-center xl:w-full max-w-6xl mx-auto pl-8 pr-8">
     <h1 class="font-4xl md:font-hero font-thin md:mt-10 mb-8">{{ self.page_title() }}</h1>
-    <p class="ffont-lg md:font-xl tracking-wide leading-relaxed max-w-4xl mb-10 mt-0">
+    <p class="font-lg md:font-xl tracking-wide leading-relaxed max-w-4xl mb-10 mt-0">
       {{ self.page_desc() }}
     </p>
   </section>
